# wgpu-ssnp

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_wasm.sh  build_web.sh  compile-web.sh  input.tiff  old_tests.py  process_tiff.py  requirements.txt  setup_emcc.sh  simulate.py  ssnp_cpp.html  test.py  test_compare.py
.github/workflows/: build.yaml  scatter_factor.yml
benchmark/: CMakeLists.txt  SETUP.md  benchmark.py  main.cpp
benchmark/ssnp/: CMakeLists.txt  SETUP.md  benchmark.py  main.cpp
cpp/: test.cpp
docs/: CMakeCache.txt  Makefile  cmake_install.cmake  index.html  optics_sim.data  optics_sim.js  optics_sim.wasm  ssnp_cpp.data  ssnp_cpp.js  ssnp_cpp.wasm
docs/js/: angle-selector.js  dom-builder.js  file-handlers.js  file-processing.js  simulation.js  visualization.js  webgpu-check.js
docs/styles/: main.css
docs/webgpu/: Makefile  cmake_install.cmake
py/: generate_tensor.py  main.py  requirements.txt  sample_ssnp_call.py  ssnp_call.py  ssnp_model.py  tilt_temp.py
src/: big_test_main.cpp  c_gamma.cpp  c_gamma.h  c_gamma.wgsl  forward.cpp  forward.h  main.cpp  model_dispatcher.cpp  model_dispatcher.h  new_main.cpp  new_old_main.cpp  old_main.cpp  sample_main.cpp  scatter_factor.cpp  scatter_factor.h  scatter_factor.wgsl  ssnp_model.cpp  ssnp_model.h  test.cpp  testWGPU.cpp  test_main.cpp  testing_main.cpp  webgpu_utils.cpp  webgpu_utils.h
src/arithmetic/: arithmetic.cpp  arithmetic.h  multiply.wgsl
src/binary_pupil/: binary_pupil.cpp  binary_pupil.h  binary_pupil.wgsl
src/born/: forward.cpp  forward.h
src/born/propagation_term/: propagation_term.cpp  propagation_term.h  propagation_term.wgsl
src/born/scatter_potential/: scatter_potential.cpp  scatter_potential.h  scatter_potential.wgsl
src/bpm/: forward.cpp  forward.h
src/bpm/bpm_diffract/: bpm_diffract.cpp  bpm_diffract.h  bpm_diffract.wgsl
src/bpm/scatter/: scatter.cpp  scatter.h  scatter.wgsl
src/c_gamma/: c_gamma.cpp  c_gamma.h  c_gamma.wgsl
src/common/: webgpu_cpp_implementation.cpp
src/common/amplitude_grad/: amplitude_grad.cpp  amplitude_grad.h  amplitude_grad.wgsl
src/common/binary_pupil/: binary_pupil.cpp  binary_pupil.h  binary_pupil.wgsl
src/common/c_gamma/: c_gamma.cpp
src/common/complex_add/: complex_add.cpp  complex_add.h  complex_add.wgsl
src/common/complex_mult/: complex_mult.cpp  complex_mult.h
src/common/complex_scale/: complex_scale.cpp  complex_scale.h  complex_scale.wgsl
src/common/complex_sub/: complex_sub.cpp  complex_sub.h
src/common/dft/: dft.cpp  dft.h
src/common/fft/: fft.cpp  fft.h
src/common/intensity/: intensity.cpp  intensity.wgsl
src/common/intensity_grad/: intensity_grad.cpp  intensity_grad.h  intensity_grad.wgsl
src/common/mult/: mult.cpp  mult.wgsl
src/common/tilt/: tilt.cpp  tilt.h
src/diffract/: diffract.cpp  diffract.h  diffract.wgsl
src/intensity/: intensity.cpp  intensity.h
src/merge_prop/: merge_prop.cpp  merge_prop.h  merge_prop.wgsl
src/mult/: mult.cpp  mult.wgsl
src/scatter_effects/: complex_sub.wgsl  scatter_effects.cpp  scatter_effects.h
src/scatter_factor/: scatter_factor.cpp  scatter_factor.h  scatter_factor.wgsl
src/split_prop/: split_prop.cpp  split_prop.h  split_prop.wgsl
src/ssnp/: forward.cpp  forward.h  inverse.cpp  inverse.h  main.cpp  pipeline.cpp  pipeline.h  webgpu_utils.h
src/ssnp/binary_pupil/: binary_pupil.cpp  binary_pupil.h
src/ssnp/c_gamma/: c_gamma.cpp  c_gamma.h
src/ssnp/dft/: dft.cpp  dft.h
src/ssnp/diffract/: diffract.cpp  diffract.h
src/ssnp/diffract_grad/: diffract_grad.cpp  diffract_grad.h  diffract_grad.wgsl
src/ssnp/intensity/: intensity.cpp  intensity.h
src/ssnp/merge_prop/: merge_prop.cpp  merge_prop.h
src/ssnp/mult/: mult.cpp  mult.h
src/ssnp/scatter_derivative/: scatter_derivative.cpp  scatter_derivative.h  scatter_derivative.wgsl
src/ssnp/scatter_effects/: complex_mult.wgsl  scatter_effects.cpp  scatter_effects.h
src/ssnp/scatter_factor/: scatter_factor.cpp  scatter_factor.h  scatter_factor.wgsl
src/ssnp/split_prop/: split_prop.cpp  split_prop.h
src/ssnp/split_prop_grad/: split_prop_grad.cpp  split_prop_grad.h  split_prop_grad.wgsl
src/ssnp/ssnp_diffract/: idiffract.h  ssnp_diffract.cpp  ssnp_diffract.h  ssnp_diffract.wgsl
src/ssnp/tilt/: tilt.cpp  tilt.h
src/ssnp/volume_grad/: volume_grad.cpp  volume_grad.h  volume_grad.wgsl
src/tests/: test_ssnp.py
src/tests/python/: ssnp_model.py
src/tilt/: tilt.cpp  tilt.h  tilt.wgsl
src/utils/: testing_io.cpp  testing_io.h
tests/: _test.py  reconstruction.py  simulate_reconstruction.py  simulate_ssnp.py  ssnp_reconstruction_test.cpp  test.py  test_ssnp.py
tests/python/: born_model.py  bpm_model.py  ssnp_model.py
web/: index.html
web/js/: app.js  dom-builder.js  file-handlers.js  file-processing.js  simulation.js  visualization.js
